--- a/index.html
+++ b/index.html
@@ -397,7 +397,7 @@ margin-left:.25in'><span style='font-family:Garamond'>&nbsp;</span></p>
   <p style='margin-top:0in;margin-right:0in;margin-bottom:0in;margin-left:8.3pt;
   margin-bottom:.0001pt;text-indent:-9.0pt'><span style='font-family:"Gill Sans";
   color:black'>&gt;<span style='font:7.0pt "Times New Roman"'> </span></span><span
-  style='font-family:Garamond;color:black'>P41 Ð ReproNim: A Center for Reproducible
+  style='font-family:Garamond;color:black'>P41 - ReproNim: A Center for Reproducible
   Neuroimaging Computation (Director of Data Models and Integration)</span></p>
   <p style='margin-top:0in;margin-right:0in;margin-bottom:0in;margin-left:8.3pt;
   margin-bottom:.0001pt;text-indent:-9.0pt'><span style='font-family:"Gill Sans";
