--- a/index.html
+++ b/index.html
@@ -301,7 +301,8 @@ Garamond'>Professional Appointments</span></p>
 
 <p class=MsoNormal><span style='font-family:Garamond'>&nbsp;</span></p>
 
-<p class=MsoNormal><b><span style='font-family:Garamond'>Selected Publications</span></b></p>
+<p class=MsoNormal><b><span style='font-family:Garamond'>Selected Publications
+(Full list: <a href="http://publicationlist.org/satra">http://publicationlist.org/satra</a>)</span></b></p>
 
 <p class=MsoListParagraph style='margin-top:.1pt;margin-right:0in;margin-bottom:
 .1pt;margin-left:.25in;text-align:justify;text-indent:-.25in'><span
@@ -340,7 +341,7 @@ margin-left:.25in;text-align:justify;text-indent:-.25in'><span
 style='font-family:Garamond'>5.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;
 </span></span><span style='font-family:Garamond'>Whitfield-Gabrieli, S., Ghosh,
 S.S., Nieto-Castanon, A., Saygin, Z., Doehrmann, O., Chai, X.J., Reynolds, G.O.,
-Hofmann, S.G., Pollack, M.H., Gabrieli, J.D. (2015) Brain connectomics predict
+Hofmann, S.G., Pollack, M.H., Gabrieli, J.D. (2016) Brain connectomics predict
 response to treatment in social anxiety disorder. <i>Molecular Psychiatry.</i></span></p>
 
 <p class=MsoNormal style='margin-top:.1pt;margin-right:0in;margin-bottom:.1pt;
