more flexible table

--- a/index.html
+++ b/index.html
@@ -347,10 +347,10 @@ response to treatment in social anxiety disorder. <i>Molecular Psychiatry.</i></
 <p class=MsoNormal style='margin-top:.1pt;margin-right:0in;margin-bottom:.1pt;
 margin-left:.25in'><span style='font-family:Garamond'>&nbsp;</span></p>
 
-<table class=MsoTableGrid border=0 cellspacing=0 cellpadding=0 width=514
- style='width:513.5pt;border-collapse:collapse;border:none'>
+<table class=MsoTableGrid border=0 cellspacing=0 cellpadding=0
+ style='border-collapse:collapse;border:none'>
  <tr>
-  <td width=289 valign=top style='width:288.5pt;border:none;border-right:solid #D9D9D9 3.0pt;
+  <td width=252 valign=top style='width:251.6pt;border:none;border-right:solid #D9D9D9 3.0pt;
   padding:0in 5.4pt 0in 5.4pt'>
   <p class=MsoNormal><b><span style='font-family:Garamond'>Technological
   Innovations</span></b></p>
@@ -387,7 +387,7 @@ margin-left:.25in'><span style='font-family:Garamond'>&nbsp;</span></p>
   </span></span><span style='font-family:Garamond'>Contributions to opensource
   projects</span></p>
   </td>
-  <td width=225 valign=top style='width:225.0pt;border:none;padding:0in 5.4pt 0in 5.4pt'>
+  <td width=252 valign=top style='width:252.4pt;border:none;padding:0in 5.4pt 0in 5.4pt'>
   <p class=MsoNormal><b><span style='font-family:Garamond'>Selected NIH Research
   Grants</span></b></p>
   <p style='margin-top:0in;margin-right:0in;margin-bottom:0in;margin-left:8.3pt;
