--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@ an ardent proponent of decentralized and distributed Web solutions for data
 sharing, querying, and computing, and a strong believer in solving problems
 together.
 
-#### Selected Publications (Full list: http://publicationlist.org/satra)
+#### Selected Publications ([Full list here](pubs.html))
 
 1. Gorgolewski, K., Burns, C.D., Madison, C., Clark, D., Halchenko, Y.O., Waskom, M.L., Ghosh, S.S. (2011). Nipype: a flexible, lightweight and extensible neuroimaging data processing framework in Python. Front. Neuroinform. 5:13.
 
