--- a/pubs.html
+++ b/pubs.html
@@ -58,8 +58,7 @@ td.year  {
   /*margin-top: 0.1em*/;
   padding: 0.1em;
   z-index: 10;
-  margin-bottom:2em;
-/*
+/* margin-bottom:2em;
   margin-top: 0.5em;
   padding: 0.5em;
 */
