revise theme description

--- a/index.html
+++ b/index.html
@@ -56,8 +56,9 @@ the areas of applied machine learning, signal processing, and translational
 medicine. My current research portfolio brings together speech, brain imaging,
 and informatics to address gaps in scientific knowledge from three perspectives:
 
-1) **Speech and biomedicine:** Understanding speech mechanisms and applying speech
-technology to healthcare.
+1) **Speech and medicine:** Understanding speech mechanisms and applying speech
+technology to healthcare, specifically psychiatric, neurodegenerative, and
+speech motor control disorders.
 
 2) **Machine learning for personalized medicine:** Integrating imaging, genetic, and
 behavioral data using machine learning algorithms for clinical diagnosis and
