--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta id='page-params'
           theme='journal'
           title=''
-          menu='Home,index.html,Publications,pubs.html'
+          menu='Home,index.html,Projects,projects.html,Publications,pubs.html'
           active='1'>
     <style>
     .floatcontainer {
@@ -56,7 +56,7 @@ the areas of applied machine learning, signal processing, and translational
 medicine. My current research portfolio brings together speech, brain imaging,
 and informatics to address gaps in scientific knowledge from three perspectives:
 
-1) **Speech and medicine:** Understanding speech mechanisms and applying speech
+1) **Speech and clinical applications:** Understanding speech mechanisms and applying speech
 technology to healthcare, specifically psychiatric, neurodegenerative, and
 speech motor control disorders.
 
