remove projects link

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta id='page-params'
           theme='journal'
           title=''
-          menu='Home,index.html,Projects,projects.html,Publications,pubs.html'
+          menu='Home,index.html,Publications,pubs.html'
           active='1'>
     <style>
     .floatcontainer {
