--- a/index.html
+++ b/index.html
@@ -89,10 +89,10 @@ together.
 
 | Technological Innovations                              | Selected NIH Research Grants                                                                                 |
 | ------------------------------------------------------ | ------------------------------------------------------------------------------------------------------------ |
-| Nipype: Dataflows for reproducible biomedical research | R01 - Nipype: Dataflows for Reproducible Biomedical Research (Principal Investigator)                        |
-| VoiceUp: Mobile health voice and data collection       | P41 - ReproNim: A Center for Reproducible Neuroimaging Computation (Director of Data Models and Integration) |
-| MURFI2: A realtime software for fMRI-based biofeedback | U01 - Connectomes related to anxiety and depression in adolescents. (Informatics lead)                       |
-| Audapter: Realtime vocal modification                  | R01 - Neuroscout: A cloud-based platform for rapid re-analysis of naturalistic fMRI datasets (Site PI)       |
+| [Nipype](http://nipy.org/nipype): Dataflows for reproducible biomedical research | R01 - Nipype: Dataflows for Reproducible Biomedical Research (Principal Investigator)                        |
+| [VoiceUp](https://github.com/satra/MIT-VoiceUp-App): Mobile health voice and data collection       | P41 - ReproNim: A Center for Reproducible Neuroimaging Computation (Director of Data Models and Integration) |
+| [MURFI2](https://github.com/gablab/murfi2/): A realtime software for fMRI-based biofeedback | U01 - Connectomes related to anxiety and depression in adolescents. (Informatics lead)                       |
+| [Audapter](https://github.com/shanqing-cai/audapter_matlab): Realtime vocal modification                  | R01 - Neuroscout: A cloud-based platform for rapid re-analysis of naturalistic fMRI datasets (Site PI)       |
 | MRCancel: MRI communication noise suppression          | R01 supplement - Genetic Determinants of Schizophrenia Intermediate Phenotypes (Site PI)                     |
 
 </textarea>
