updated to include projects

--- a/pubs.html
+++ b/pubs.html
@@ -7,8 +7,8 @@
     <meta id='page-params'
           theme='journal'
           title=''
-          menu='Home,index.html,Publications,pubs.html'
-          active='2'>
+          menu='Home,index.html,Projects,projects.html,Publications,pubs.html'
+          active='3'>
     <link rel='stylesheet' href='http://publicationslist.org/embed.css'>
     <style>
 div#yearTitle{
