added social sites

--- a/index.html
+++ b/index.html
@@ -34,6 +34,8 @@
 
 > Email: satra at mit dot edu
 
+> [Github](https://github.com/satra) | [Twitter](https://twitter.com/satra_)
+
 > Office:  46-4033F, 43 Vassar St, Cambridge, MA 02139
 
 > Tel:  +1.617.324.3544 | [Map](http://whereis.mit.edu/?go=46)
