move to protocol based access

--- a/pubs.html
+++ b/pubs.html
@@ -9,7 +9,7 @@
           title=''
           menu='Home,index.html,Projects,projects.html,Publications,pubs.html'
           active='3'>
-    <link rel='stylesheet' href='http://publicationslist.org/embed.css'>
+    <link rel='stylesheet' href='//publicationslist.org/embed.css'>
     <style>
 div#yearTitle{
 	padding-bottom:1em;
@@ -496,17 +496,17 @@ table.sameYearTable{
 <div id='tagslist' style='display:none;'></div>
 <div id='authorslist' style='display:none;'></div>
 <div class='poweredby' style='clear:right'>
-<table><tr><td><a class='publistlink' href='http://publicationslist.org/index.html'> <img src='http://publicationslist.org/laf/logo32-foot.png'></a></td><td> Powered by <a class='publistlink' href='http://publicationslist.org/index.html'>PublicationsList.org</a>.</td></tr></table>
+<table><tr><td><a class='publistlink' href='//publicationslist.org/index.html'> <img src='//publicationslist.org/laf/logo32-foot.png'></a></td><td> Powered by <a class='publistlink' href='//publicationslist.org/index.html'>PublicationsList.org</a>.</td></tr></table>
 </textarea>
 
-<script src='http://publicationslist.org/data/satra/publist.js'></script>
+<script src='//publicationslist.org/data/satra/publist.js'></script>
 
 <script>
 var details = {"firstname":"Satrajit","middlename":"S","lastname":"Ghosh",
-"email":"satra@mit.edu","website":"http:\/\/www.mit.edu\/~satra","address":"","biosketch":""}
+"email":"satra@mit.edu","website":"\/\/www.mit.edu\/~satra","address":"","biosketch":""}
 ;
 var readonly = '1';
-var rootpath = 'http://publicationslist.org/';
+var rootpath = '//publicationslist.org/';
 var ownpage = '1';
 var userid = 'satra';
 var mode = 'publish';
@@ -520,12 +520,12 @@ var recent = false;
 </script>
 
 
-<script src='http://publicationslist.org/schema.js?'></script>
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-<script src='http://publicationslist.org/data/satra/BROWSER.js?1384435485'></script>
-<script src='http://publicationslist.org/data/satra/DOM.js?1384435485'></script>
-<script src='http://publicationslist.org/data/satra/pubutil.js?1434354606'></script>
-<script src='http://publicationslist.org/data/satra/pubinit.js?1384435485'></script>
+<script src='//publicationslist.org/schema.js?'></script>
+<script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+<script src='//publicationslist.org/data/satra/BROWSER.js?1384435485'></script>
+<script src='//publicationslist.org/data/satra/DOM.js?1384435485'></script>
+<script src='//publicationslist.org/data/satra/pubutil.js?1434354606'></script>
+<script src='//publicationslist.org/data/satra/pubinit.js?1384435485'></script>
 
 <script src="config/strapdown.min.js"></script>
 </body>
