--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 </div>
 <div style="position: relative; overflow: auto">
 
-#### Contact
+> [CV](assets/CV_Latest.pdf)
 
 > Email: satra at mit dot edu
 
@@ -39,6 +39,7 @@
 > Office:  46-4033F, 43 Vassar St, Cambridge, MA 02139
 
 > Tel:  +1.617.324.3544 | [Map](http://whereis.mit.edu/?go=46)
+
 </div>
 </div>
 <br />
@@ -49,7 +50,7 @@ I am a Principal Research Scientist at the [McGovern Institute for Brain Researc
 at MIT, an Assistant Professor in the Department of Otolaryngology at Harvard
 Medical School, and a faculty member in the [Speech and Hearing Biosciences and
 Technology](http://dms.hms.harvard.edu/shbt/) program in the Harvard Division of
-Medical Sciences. You can find a [full CV here](assets/CV_Latest.pdf).
+Medical Sciences.
 
 #### What do I do
 
@@ -79,15 +80,15 @@ together.
 
 #### Selected Publications ([Full list here](pubs.html))
 
-1. Gorgolewski, K., Burns, C.D., Madison, C., Clark, D., Halchenko, Y.O., Waskom, M.L., Ghosh, S.S. (2011). Nipype: a flexible, lightweight and extensible neuroimaging data processing framework in Python. Front. Neuroinform. 5:13.
+* Guell X, Schmahmann JD, Gabrieli J, Ghosh SS (2018). Functional gradients of the cerebellum. Elife
 
-2. Margulies D, Ghosh SS, Goulas A, Falkiewicz M, Huntenburg JM, Langs G, Bezgin G, Eickhoff S, Castellanos FX, Petrides M, Jefferies E, Smallwood J (2016). Situating the default-mode network in a principal gradient of macroscale cortical organization. Proceedings of National Academy of Sciences.
+* McClure P, Zheng C, Kaczmarzyk J, Rogers-Lee J, Ghosh S, Nielson D, Bandettini P, Pereira F (2018) Distributed Weight Consolidation: A Brain Segmentation Case Study In: Neural Information Processing Systems
 
-3. Doehrmann, O., Ghosh, S.S., Polli, F.P., Reynolds, G., Horn, F., Keshavan, A., Whitfield-Gabrieli, S., Hofmann, S.G., Pollack, M., Gabrieli, J.D. (2013) Predicting treatment response in social anxiety disorder from functional magnetic resonance imaging. JAMA Psychiatry. (Joint first authors)
+* Doehrmann O, Ghosh SS, Polli FE, Reynolds GO, Horn F, Keshavan A, Triantafyllou C, Saygin ZM, Whitfield-Gabrieli S, Hofmann SG, Pollack M, Gabrieli JD (2013). Predicting treatment response in social anxiety disorder from functional magnetic resonance imaging. JAMA Psychiatry. 2013
 
-4. Gabrieli, J.D.E., Ghosh, S.S., Whitfield-Gabrieli, S. (2015). Prediction as a Humanitarian and Pragmatic Contribution from Human Cognitive Neuroscience. Neuron.
+* Gorgolewski K, Burns CD, Madison C, Clark D, Halchenko YO, Waskom ML, Ghosh SS (2011). Nipype: a flexible, lightweight and extensible neuroimaging data processing framework in python. Front Neuroinform.
 
-5. Whitfield-Gabrieli, S., Ghosh, S.S., Nieto-Castanon, A., Saygin, Z., Doehrmann, O., Chai, X.J., Reynolds, G.O., Hofmann, S.G., Pollack, M.H., Gabrieli, J.D. (2016) Brain connectomics predict response to treatment in social anxiety disorder. Molecular Psychiatry.
+* Ghosh SS, Matthies ML, Maas E, Hanson A, Tiede M, Ménard L, Guenther FH, Lane H, Perkell JS (2010). An investigation of the relation between sibilant production and somatosensory and auditory acuity. J Acoust Soc Am.
 
 | Technological Innovations                              | Selected NIH Research Grants                                                                                 |
 | ------------------------------------------------------ | ------------------------------------------------------------------------------------------------------------ |
@@ -95,7 +96,7 @@ together.
 | [VoiceUp](https://github.com/satra/MIT-VoiceUp-App): Mobile health voice and data collection       | P41 - ReproNim: A Center for Reproducible Neuroimaging Computation (Director of Data Models and Integration) |
 | [MURFI2](https://github.com/gablab/murfi2/): A realtime software for fMRI-based biofeedback | U01 - Connectomes related to anxiety and depression in adolescents. (Informatics lead)                       |
 | [Audapter](https://github.com/shanqing-cai/audapter_matlab): Realtime vocal modification                  | R01 - Neuroscout: A cloud-based platform for rapid re-analysis of naturalistic fMRI datasets (Site PI)       |
-| [MRCancel](https://github.com/satra/MRCancel): MRI communication noise suppression          | R01 supplement - Genetic Determinants of Schizophrenia Intermediate Phenotypes (Site PI)                     |
+| [MRCancel](https://github.com/satra/MRCancel): MRI communication noise suppression          |                      |
 
 </textarea>
 <script src="config/strapdown.min.js"></script>
