--- a/projects.html
+++ b/projects.html
@@ -63,9 +63,6 @@ If you have solved problems associated with any of the projects below, we would 
   Collaborators
   - Diego Pizzagalli (McLean Hospital)
 
-  SHBT Lab rotation
-  - Tanya Talkar (Harvard)
-
   Former members:
   - Beth Semels (MIT)
   - Anissa Sridhar (MIT)
@@ -83,9 +80,6 @@ If you have solved problems associated with any of the projects below, we would 
    Current team members:
    - Phil Song (MEEI)
 
-   SHBT Lab rotation
-   - Sarah Lutz (Harvard)
-
    Former members:
    - Gregory Ciccarelli (MITLL)
 
@@ -99,7 +93,6 @@ If you have solved problems associated with any of the projects below, we would 
    Current team members:
    - Kevin Sitek (Harvard, MIT)
    - Elliott Kozin (MEEI)
-   - Aaron Remenschneider (MEEI)
 
 #### Machine learning for personalized medicine
 
@@ -146,7 +139,7 @@ If you have solved problems associated with any of the projects below, we would 
    - Can resection volume be determined automatically?
 
    Current team members:
-   - Omar Arnaud (BWH)
+   - Omar Arnaout (BWH)
    - Jakub Kaczmarzyk (MIT)
 
 #### Neuroinformatics and reproducible research
@@ -167,13 +160,14 @@ If you have solved problems associated with any of the projects below, we would 
    - Smruti Padhy (MIT)
    - Mathias Goncalves (MIT)
    - Jakub Kaczmarzyk (MIT)
-   - Shilpa Chakravartula (MIT)
 
 9. **Lightsheet microscopy data analysis**
 
-   The aim of this project is to setup automated processing of lightsheet microscopy data, including whole brain registration, template creation, region labeling, and analytics. We are using the [ClearMap library](https://github.com/ChristophKirst/ClearMap) and adapting it for our needs.
+   The aim of this project was to setup automated processing of lightsheet microscopy data, including whole brain registration, template creation, region labeling, and analytics. We are using the [ClearMap library](https://github.com/ChristophKirst/ClearMap) and adapting it for our needs.
+    
+   This is no longer being pursued.
 
-   Current team members:
+   Team members:
 
    - Dorota Jarecka (MIT)
    - Alex Xue (MIT)
