--- a/index.html
+++ b/index.html
@@ -77,6 +77,8 @@ disciplines. I am a lead architect of the [Nipype dataflow platform](http://nipy
 an ardent proponent of decentralized and distributed Web solutions for data
 sharing, querying, and computing, and a strong believer in solving problems
 together.
+    
+Visit our [group page](https://satra.cogitatum.org/group) for more details.
 
 #### Selected Publications ([Full list here](pubs.html))
 
