--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 </div>
 <div style="position: relative; overflow: auto">
 
-> [CV](assets/CV_Latest.pdf)
+> [Group page](https://satra.cogitatum.org/group) | [CV](assets/CV_Latest.pdf)
 
 > Email: satra at mit dot edu
 
