update to point to group website

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta id='page-params'
           theme='journal'
           title=''
-          menu='Home,index.html,Projects,projects.html,Publications,pubs.html'
+          menu='Home,index.html,Publications,pubs.html'
           active='1'>
     <style>
     .floatcontainer {
@@ -71,7 +71,7 @@ treatment prediction.
 organizing scientific information and creating performant tools to address the
 data deluge and reproducibility. 
 
-My research group develops robust, predictive models around human
+[My research group](https://satra.cogitatum.org/group) develops robust, predictive models around human
 health and novel analytic platforms, and establishes collaborations across
 disciplines. I am a lead architect of the [Nipype dataflow platform](http://nipy.org/nipype),
 an ardent proponent of decentralized and distributed Web solutions for data
