--- a/projects.html
+++ b/projects.html
@@ -24,171 +24,7 @@
 
 <textarea theme='journal' style="display:none;">
 
-A listing of current projects in my group. Feel free to contact me if you would like to collaborate with us on any project.
-
-[Speech and clinical applications](#h0.0.0.1_speech-and-clinical-applications)
-
-[Machine learning for personalized medicine](#h0.0.0.2_machine-learning-for-personalized-medicine)
-
-[Neuroinformatics and reproducible research](#h0.0.0.3_neuroinformatics-and-reproducible-research)
-
-Our collaboration policies are:
-
-- Authorship is a function of intellectual contribution and we minimize author bloat in our group. For multi-institution student collaborations, we will identify ahead of time who the primary advisors and collaborators are on a project.
-- Our work is open and I generally don't care about patents. However, there have been prior situations where we have applied for patents during collaborations.
-- We tend to share any data we collect and any code we produce under open licenses (data: PDDL, code: Apache 2.0, doc: CC-BY)
-- Any digital research work we produce sdhould be re-executable and hopefully reproducible/generalizable.
-
-If you have solved problems associated with any of the projects below, we would love to hear from you. For us, a solution typically implies available data, code, and/or replicated results.
-
-#### Speech and clinical applications
-
-1. **[Speech and Depression](http://voicesurvey.mit.edu/)**
-
-   The goal of this project is to observe and analyze vocal variation in psychiatric and other neurological disorders and to understand the brain bases of such variation. As part of this project we have developed an opensource infrastructure for collecting data using smartphones: [MIT Voice Up](https://github.com/satra/MIT-VoiceUp-App).
-
-   At present our focus is on depression. You can contribute by signing up for the study and using the [mobile apps available here](http://voicesurvey.mit.edu/mobile-survey).
-
-  Key questions:
-  - Is voice a good longitudinal biomarker?
-  - How much vocal information is needed for stable tracking?
-  - Can we create a model of speech production whose parameters are good substitutes for generic acoustic based features?
-
-  Current team members:
-  - Gregory Ciccarelli (MITLL)
-  - Kevin Sitek (Harvard, MIT)
-  - Mathias Goncalves (MIT)
-  - Thomas Quatieri (MITLL)
-
-  Collaborators
-  - Diego Pizzagalli (McLean Hospital)
-
-  Former members:
-  - Beth Semels (MIT)
-  - Anissa Sridhar (MIT)
-  - Carlo de los Angeles (MIT)
-
-2. **Vocal paralysis**
-
-   The aim of this project is to enable a continuous tracker for voice (not speech) health.
-
-   Key questions:
-   - Can voice health be tracked longitudinally using a combination of signal processing and machine learning?
-   - Can a clinically relevant display be built to track such voice health?
-   - How much individual data is needed to provide a good estimate of vocal health?
-
-   Current team members:
-   - Phil Song (MEEI)
-
-   Former members:
-   - Gregory Ciccarelli (MITLL)
-
-3. **Subcortical interactions during sound generation**
-
-   The aim of this project is to uncover the role of brainstem structures during speech production. This is Kevin Sitek's NIH F31 project involving _in vivo_ high resolution imaging and analysis of _post mortem_ data.
-
-   Key questions:
-   - What role, if any, do subcortical structures play during sensorimotor interactions?
-
-   Current team members:
-   - Kevin Sitek (Harvard, MIT)
-   - Elliott Kozin (MEEI)
-
-#### Machine learning for personalized medicine
-
-4. **Multimodal analysis of schizophrenia**
-
-   This is a collaboration with the [Genus Consortium](http://genus.mgh.harvard.edu/) to apply multivariate data mining and visualizatin tools to the GENUS dataset. An additional target is to support data harmonization in multi-site studies.
-
-   Key questions:
-   - Do multivariate deterministic and probabilistic tools provide a more sensitive approach to detecting genetic markers of brain structure and cognitive variation?
-   - Can a common vocabulary help organize multi-site data?
-
-   Current team members:
-   - Tracey Petryshen (GENUS PI, MGH)
-   - Gabriella Blokland (MGH)
-   - Kayhan Batmanghelich (Pittsburgh)
-   - Sjoerd Huisman (TU Delft)
-   - Yoel Sanchez-Araujo (Princeton)
-
-   In a separate project at MIT, investigators are using the [MURFI v2](https://github.com/gablab/murfi2) realtime fMRI tool to train individuals with Schizophrenia to reduce auditory hallucinations using brain-based biofeedback.
-
-5. **Mild traumatic brain injury**
-
-   These recently completed projects looked at treatment using cognitive training and realtime fMRI and general data collection to explore structure, function, and behavior.
-
-6. **CBT treatment of Autism**
-
-   This is a clinical trial being run out of MGH with imaging being done at MIT. The intent of the trial is to determine if a pre-treatment dose of oxytocin can augment CBT.
-
-   Key questions:
-   - Does pre-treatment imaging and/or cognitive measures predict treatment outcome?
-
-   Current team members:
-   - Dorit Kliemann (Caltech)
-   - Mathias Goncalves (MIT)
-   - Aude Henin (MGH)
-   - John Gabrieli (MIT)
-
-7. **Meningioma detection and tracking**
-
-   Detection and tracking of meningiomas pre and post surgery with deep learning.
-
-   Key questions:
-   - Given limited imaging data, how can we build a good DNN classifier?
-   - Can resection volume be determined automatically?
-
-   Current team members:
-   - Omar Arnaout (BWH)
-   - Jakub Kaczmarzyk (MIT)
-
-#### Neuroinformatics and reproducible research
-
-8. **Reproducible research**
-
-   For our reproducible research portfolio, we work on three projects: [Nipype](http://nipy.org/nipype), [Neuroscout](https://files.aievolution.com/hbm1701/abstracts/36850/1694_delaVega.pdf), and [ReproNim](http://repronim.org/). These are all collaborative projects involving multiple institutions.
-
-   **Nipype** is a framework and a Python library for creating reproducible dataflows. To contribute to Nipype please get in touch with us on the [Nipype Gitter channel](https://gitter.im/nipy/nipype).
-
-   **ReproNim** is a National Center for Reproducible Neuroimaging Computation focused on developing tools and platforms to enable researchers to perform reproducible research. Our group focuses on the [Brainverse project](https://github.com/ReproNim/brainverse) and development of [NIDM models](http://nidm.nidash.org/).
-
-   **Neuroscout** is a platform that enables easy analysis of naturalistic and other fMRI datasets. It builds on a library, [Pliers](https://github.com/tyarkoni/pliers), for extracting features from movie clips using various image and audio processing services.
-
-   Local MIT crew:
-
-   - Dorota Jarecka (MIT)
-   - Smruti Padhy (MIT)
-   - Mathias Goncalves (MIT)
-   - Jakub Kaczmarzyk (MIT)
-
-9. **Lightsheet microscopy data analysis**
-
-   The aim of this project was to setup automated processing of lightsheet microscopy data, including whole brain registration, template creation, region labeling, and analytics. We are using the [ClearMap library](https://github.com/ChristophKirst/ClearMap) and adapting it for our needs.
-    
-   This is no longer being pursued.
-
-   Team members:
-
-   - Dorota Jarecka (MIT)
-   - Alex Xue (MIT)
-   - Yingxi Lin (MIT)
-
-10. **Metasearch and brainbox**
-
-    These projects were developed as part of the [Open Science Prize](https://www.openscienceprize.org/) competition and available under the [Open Neuroimaging Laboratory](http://openneu.ro/) platform.
-
-    Team members:
-    - Roberto Toro (Pasteur Institute)
-    - Katje Heuer (Max Planck Institute for Human Cognitive and Brain Sciences)
-    - Amy Lee Sterling (Eyewire)
-    - Nolan Nichols (Genentech)
-
-11. **[BANDA - Boston Adolescent Neuroimaging Of Depression And Anxiety](https://banda-connect.github.io/)**
-
-    This is a Disease Connectome Project targeting adolescents with depression and anxiety. It is being led out of MIT by Susan Whitfield-Gabrieli and John Gabrieli. Our group focuses on providing informatics support for the project. For details of the project and how you may participate see the [Project website](https://banda-connect.github.io/).
-
-    Current team members supporting the project:
-    - Mathias Goncalves (MIT)
+    For a list of projects visit [my group's website](https://satra.cogitatum.org/group).
 
 </textarea>
 <script src="config/strapdown.min.js"></script>
