explicit pointer to the group

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@ I am a Principal Research Scientist at the [McGovern Institute for Brain Researc
 at MIT, an Assistant Professor in the Department of Otolaryngology at Harvard
 Medical School, and a faculty member in the [Speech and Hearing Biosciences and
 Technology](http://dms.hms.harvard.edu/shbt/) program in the Harvard Division of
-Medical Sciences.
+Medical Sciences. I direct the [Senseable Intelligence Group](https://satra.cogitatum.org/group).
 
 #### What do I do
 
