update CV and homepage

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@ Visit our [group page](https://satra.cogitatum.org/group) for more details.
 | [VoiceUp](https://github.com/satra/MIT-VoiceUp-App): Mobile health voice and data collection       | P41 - ReproNim: A Center for Reproducible Neuroimaging Computation (Director of Data Models and Integration) |
 | [MURFI2](https://github.com/gablab/murfi2/): A realtime software for fMRI-based biofeedback | U01 - Connectomes related to anxiety and depression in adolescents. (Informatics lead)                       |
 | [Audapter](https://github.com/shanqing-cai/audapter_matlab): Realtime vocal modification                  | R01 - Neuroscout: A cloud-based platform for rapid re-analysis of naturalistic fMRI datasets (Site PI)       |
-| [MRCancel](https://github.com/satra/MRCancel): MRI communication noise suppression          |                      |
+| [MRCancel](https://github.com/satra/MRCancel): MRI communication noise suppression          | R24 - DANDI: Distributed Archives for Neurophysiology Data Integration (Principal Investigator) |
 
 </textarea>
 <script src="config/strapdown.min.js"></script>
