--- a/index.html
+++ b/index.html
@@ -82,11 +82,15 @@ Visit our [group page](https://satra.cogitatum.org/group) for more details.
 
 #### Selected Publications ([Full list here](pubs.html))
 
+* Low DM, Bentley KH, Ghosh SS (2020). Automated assessment of psychiatric disorders using speech: A systematic review. Laryngoscope Investig Otolaryngol.
+
+* Sitek KR, Gulban OF, Calabrese E, Johnson GA, Lage-Castellanos A, Moerel M, Ghosh SS, De Martino F (2019). Mapping the human subcortical auditory system using histology, post mortem MRI and in vivo MRI at 7T.  Elife.
+    
 * Guell X, Schmahmann JD, Gabrieli J, Ghosh SS (2018). Functional gradients of the cerebellum. Elife
 
 * McClure P, Zheng C, Kaczmarzyk J, Rogers-Lee J, Ghosh S, Nielson D, Bandettini P, Pereira F (2018) Distributed Weight Consolidation: A Brain Segmentation Case Study In: Neural Information Processing Systems
 
-* Doehrmann O, Ghosh SS, Polli FE, Reynolds GO, Horn F, Keshavan A, Triantafyllou C, Saygin ZM, Whitfield-Gabrieli S, Hofmann SG, Pollack M, Gabrieli JD (2013). Predicting treatment response in social anxiety disorder from functional magnetic resonance imaging. JAMA Psychiatry. 2013
+* Doehrmann O, Ghosh SS, Polli FE, Reynolds GO, Horn F, Keshavan A, Triantafyllou C, Saygin ZM, Whitfield-Gabrieli S, Hofmann SG, Pollack M, Gabrieli JD (2013). Predicting treatment response in social anxiety disorder from functional magnetic resonance imaging. JAMA Psychiatry.
 
 * Gorgolewski K, Burns CD, Madison C, Clark D, Halchenko YO, Waskom ML, Ghosh SS (2011). Nipype: a flexible, lightweight and extensible neuroimaging data processing framework in python. Front Neuroinform.
 
@@ -96,7 +100,7 @@ Visit our [group page](https://satra.cogitatum.org/group) for more details.
 | ------------------------------------------------------ | ------------------------------------------------------------------------------------------------------------ |
 | [Nipype](http://nipy.org/nipype): Dataflows for reproducible biomedical research | R01 - Nipype: Dataflows for Reproducible Biomedical Research (Principal Investigator)                        |
 | [VoiceUp](https://github.com/satra/MIT-VoiceUp-App): Mobile health voice and data collection       | P41 - ReproNim: A Center for Reproducible Neuroimaging Computation (Director of Data Models and Integration) |
-| [MURFI2](https://github.com/gablab/murfi2/): A realtime software for fMRI-based biofeedback | U01 - Connectomes related to anxiety and depression in adolescents. (Informatics lead)                       |
+| [MURFI2](https://github.com/gablab/murfi2/): A realtime software for fMRI-based biofeedback | RF1 - Nobrainer: A robust and validated neural network tool suite for imagers (Principal Investigator) |
 | [Audapter](https://github.com/shanqing-cai/audapter_matlab): Realtime vocal modification                  | R01 - Neuroscout: A cloud-based platform for rapid re-analysis of naturalistic fMRI datasets (Site PI)       |
 | [MRCancel](https://github.com/satra/MRCancel): MRI communication noise suppression          | R24 - DANDI: Distributed Archives for Neurophysiology Data Integration (Principal Investigator) |
 
