--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 </div>
 <div style="position: relative; overflow: auto">
 
-> [Group page](https://satra.cogitatum.org/group) | [CV](assets/CV_Latest.pdf)
+> [Group page](https://sensein.group/) | [CV](assets/CV_Latest.pdf)
 
 > Email: satra at mit dot edu
 
@@ -50,7 +50,7 @@ I am a Principal Research Scientist at the [McGovern Institute for Brain Researc
 at MIT, an Assistant Professor in the Department of Otolaryngology at Harvard
 Medical School, and a faculty member in the [Speech and Hearing Biosciences and
 Technology](http://dms.hms.harvard.edu/shbt/) program in the Harvard Division of
-Medical Sciences. I direct the [Senseable Intelligence Group](https://satra.cogitatum.org/group).
+Medical Sciences. I direct the [Senseable Intelligence Group](https://sensein.group/).
 
 #### What do I do
 
@@ -71,14 +71,14 @@ treatment prediction.
 organizing scientific information and creating performant tools to address the
 data deluge and reproducibility. 
 
-[My research group](https://satra.cogitatum.org/group) develops robust, predictive models around human
+[My research group](https://sensein.group/) develops robust, predictive models around human
 health and novel analytic platforms, and establishes collaborations across
 disciplines. I am a lead architect of the [Nipype dataflow platform](http://nipy.org/nipype),
 an ardent proponent of decentralized and distributed Web solutions for data
 sharing, querying, and computing, and a strong believer in solving problems
 together.
     
-Visit our [group page](https://satra.cogitatum.org/group) for more details.
+Visit our [group page](https://sensein.group/) for more details.
 
 #### Selected Publications ([Full list here](pubs.html))
 
@@ -98,11 +98,11 @@ Visit our [group page](https://satra.cogitatum.org/group) for more details.
 
 | Technological Innovations                              | Selected NIH Research Grants                                                                                 |
 | ------------------------------------------------------ | ------------------------------------------------------------------------------------------------------------ |
-| [Nipype](http://nipy.org/nipype): Dataflows for reproducible biomedical research | R01 - Nipype: Dataflows for Reproducible Biomedical Research (Principal Investigator)                        |
+| [Nipype](http://nipy.org/nipype): Dataflows for reproducible biomedical research | R24 - DANDI: Distributed Archives for Neurophysiology Data Integration (Principal Investigator)                      |
 | [VoiceUp](https://github.com/satra/MIT-VoiceUp-App): Mobile health voice and data collection       | P41 - ReproNim: A Center for Reproducible Neuroimaging Computation (Director of Data Models and Integration) |
 | [MURFI2](https://github.com/gablab/murfi2/): A realtime software for fMRI-based biofeedback | RF1 - Nobrainer: A robust and validated neural network tool suite for imagers (Principal Investigator) |
 | [Audapter](https://github.com/shanqing-cai/audapter_matlab): Realtime vocal modification                  | R01 - Neuroscout: A cloud-based platform for rapid re-analysis of naturalistic fMRI datasets (Site PI)       |
-| [MRCancel](https://github.com/satra/MRCancel): MRI communication noise suppression          | R24 - DANDI: Distributed Archives for Neurophysiology Data Integration (Principal Investigator) |
+| [MRCancel](https://github.com/satra/MRCancel): MRI communication noise suppression          |  |
 
 </textarea>
 <script src="config/strapdown.min.js"></script>
