--- a/index.html
+++ b/index.html
@@ -99,10 +99,10 @@ Visit our [group page](https://sensein.group/) for more details.
 | Technological Innovations                              | Selected NIH Research Grants                                                                                 |
 | ------------------------------------------------------ | ------------------------------------------------------------------------------------------------------------ |
 | [Nipype](http://nipy.org/nipype): Dataflows for reproducible biomedical research | R24 - DANDI: Distributed Archives for Neurophysiology Data Integration (Principal Investigator)                      |
-| [VoiceUp](https://github.com/satra/MIT-VoiceUp-App): Mobile health voice and data collection       | P41 - ReproNim: A Center for Reproducible Neuroimaging Computation (Director of Data Models and Integration) |
+| [ReproschemaUI](https://github.com/repronim/reproschema-ui): Mobile voice and survey data collection       | P41 - ReproNim: A Center for Reproducible Neuroimaging Computation (Director of Data Models and Integration) |
 | [MURFI2](https://github.com/gablab/murfi2/): A realtime software for fMRI-based biofeedback | RF1 - Nobrainer: A robust and validated neural network tool suite for imagers (Principal Investigator) |
-| [Audapter](https://github.com/shanqing-cai/audapter_matlab): Realtime vocal modification                  | R01 - Neuroscout: A cloud-based platform for rapid re-analysis of naturalistic fMRI datasets (Site PI)       |
-| [MRCancel](https://github.com/satra/MRCancel): MRI communication noise suppression          |  |
+| [MumbleMelody](https://sensein.group/mumble_melody_project/): Realtime vocal modification                  | U24 - An extensible brain knowledge base and toolset spanning modalities for multi-species data-driven cell types (Site PI)       |
+| [Pydra](https://github.com/nipype/pydra): A new workflow engine          | Bridg2AI - Vocal biomarkers of health |
 
 </textarea>
 <script src="config/strapdown.min.js"></script>
