--- a/index.html
+++ b/index.html
@@ -46,7 +46,8 @@
 
 #### Who am I
 
-I am a Principal Research Scientist at the [McGovern Institute for Brain Research](http://mcgovern.mit.edu/)
+I am the Director of Open Data in Neuroscience Initiative and a Principal Research 
+Scientist at the [McGovern Institute for Brain Research](http://mcgovern.mit.edu/)
 at MIT, an Assistant Professor in the Department of Otolaryngology at Harvard
 Medical School, and a faculty member in the [Speech and Hearing Biosciences and
 Technology](http://dms.hms.harvard.edu/shbt/) program in the Harvard Division of
