--- a/index.html
+++ b/index.html
@@ -102,8 +102,8 @@ Visit our [group page](https://sensein.group/) for more details.
 | [Nipype](http://nipy.org/nipype): Dataflows for reproducible biomedical research | R24 - DANDI: Distributed Archives for Neurophysiology Data Integration (Principal Investigator)                      |
 | [ReproschemaUI](https://github.com/repronim/reproschema-ui): Mobile voice and survey data collection       | P41 - ReproNim: A Center for Reproducible Neuroimaging Computation (Director of Data Models and Integration) |
 | [MURFI2](https://github.com/gablab/murfi2/): A realtime software for fMRI-based biofeedback | RF1 - Nobrainer: A robust and validated neural network tool suite for imagers (Principal Investigator) |
-| [MumbleMelody](https://sensein.group/mumble_melody_project/): Realtime vocal modification                  | U24 - An extensible brain knowledge base and toolset spanning modalities for multi-species data-driven cell types (Site PI)       |
-| [Pydra](https://github.com/nipype/pydra): A new workflow engine          | Bridg2AI - Vocal biomarkers of health |
+| [MumbleMelody](https://sensein.group/mumble_melody_project/): Realtime vocal modification                  | U24 - An extensible brain knowledge base and toolset spanning modalities for multi-species data-driven cell types (Principal Investigator)       |
+| [Pydra](https://github.com/nipype/pydra): A new workflow engine          | Bridg2AI - Vocal biomarkers of health (Principal Investigator) |
 
 </textarea>
 <script src="config/strapdown.min.js"></script>
