update intro page

--- a/index.html
+++ b/index.html
@@ -46,42 +46,51 @@
 
 #### Who am I
 
-I am the Director of Open Data in Neuroscience Initiative and a Principal Research 
-Scientist at the [McGovern Institute for Brain Research](http://mcgovern.mit.edu/)
-at MIT, an Assistant Professor in the Department of Otolaryngology at Harvard
-Medical School, and a faculty member in the [Speech and Hearing Biosciences and
+I am the Director of Open Data in Neuroscience Initiative and a Principal Research Scientist 
+at the [McGovern Institute for Brain Research](http://mcgovern.mit.edu/) at MIT, an 
+Assistant Professor of Otolaryngology - Head and Neck Surgery at Harvard Medical School, 
+and a faculty member in the [Speech and Hearing Biosciences and
 Technology](http://dms.hms.harvard.edu/shbt/) program in the Harvard Division of
-Medical Sciences. I direct the [Senseable Intelligence Group](https://sensein.group/).
+Medical Sciences. I am a computer scientist and computational neuroscientist by training 
+and direct the [Senseable Intelligence Group](https://sensein.group/).
 
 #### What do I do
 
 My research interests span computer science and neuroimaging, specifically in
 the areas of applied machine learning, signal processing, and translational
 medicine. My current research portfolio brings together speech, brain imaging,
-and informatics to address gaps in scientific knowledge from three perspectives:
+and neuroinformatics to address gaps in scientific knowledge in three areas:
 
-1) **Speech and clinical applications:** Understanding speech mechanisms and applying speech
+1) **Speech and clinical applications:** Understanding the neural basis and 
+translational applications of human spoken communication and applying speech
 technology to healthcare, specifically psychiatric, neurodegenerative, and
-speech motor control disorders.
+speech motor control disorders. More generally, to see the spoken signal as 
+a window into our mind and health, more broadly.
 
-2) **Machine learning for personalized medicine:** Integrating imaging, genetic, and
-behavioral data using machine learning algorithms for clinical diagnosis and
-treatment prediction.
+2) **Machine learning for personalized medicine:** Integrating imaging, genetic, 
+and behavioral data using machine learning algorithms for clinical diagnosis,
+prognosis, and treatment prediction. We link predictability with explainability 
+and interpretability, alongside ethical and diverse data and models.
 
-3) **Neuroinformatics and reproducible research:** Establishing standards for
-organizing scientific information and creating performant tools to address the
-data deluge and reproducibility. 
+3) **Neuroinformatics and reproducible research:** Preserving information for 
+reproducible research and knowledge generation. We do this by establishing 
+standards for organizing scientific information and creating performant tools 
+to address the data and information deluge and reproducibility. 
 
-[My research group](https://sensein.group/) develops robust, predictive models around human
-health and novel analytic platforms, and establishes collaborations across
-disciplines. I am a lead architect of the [Nipype dataflow platform](http://nipy.org/nipype),
-an ardent proponent of decentralized and distributed Web solutions for data
-sharing, querying, and computing, and a strong believer in solving problems
-together.
+[My research group](https://sensein.group/) develops robust, predictive models 
+around human health and novel analytic platforms, and establishes 
+collaborations across disciplines. I was one of the lead architect of the 
+[Nipype dataflow platform](http://nipy.org/nipype), an ardent proponent of 
+decentralized and distributed Web solutions for data sharing, querying, and 
+computing, and a strong believer in solving problems together.
     
 Visit our [group page](https://sensein.group/) for more details.
 
 #### Selected Publications ([Full list here](pubs.html))
+
+* Low DM, Rao V, Randolph G, Song PC, Ghosh SS. (2024) Identifying bias in models that detect vocal fold paralysis from audio recordings using explainable machine learning and clinician ratings. PLOS Digital Health.
+
+* Park J, Wang J, Guan W, Gjesteby LA, Pollack D, Kamentsky L, Evans NB, Stirman J, Gu X, Zhao C, Marx S, Kim ME, Choi SW, Snyder M, Chavez D, Su-Arcaro C, Tian Y, Park CS, Zhang Q, Yun DH, Moukheiber M, Feng G, Yang XW, Keene CD, Hof PR, Ghosh SS, Frosch MP, Brattain LJ, Chung K. Integrated platform for multiscale molecular imaging and phenotyping of the human brain. Science. 2024. doi:10.1126/science.adh9979. Epub 2024 Jun 14. PubMed PMID: 38870291.
 
 * Low DM, Bentley KH, Ghosh SS (2020). Automated assessment of psychiatric disorders using speech: A systematic review. Laryngoscope Investig Otolaryngol.
 
@@ -97,13 +106,23 @@ Visit our [group page](https://sensein.group/) for more details.
 
 * Ghosh SS, Matthies ML, Maas E, Hanson A, Tiede M, Ménard L, Guenther FH, Lane H, Perkell JS (2010). An investigation of the relation between sibilant production and somatosensory and auditory acuity. J Acoust Soc Am.
 
-| Technological Innovations                              | Selected NIH Research Grants                                                                                 |
-| ------------------------------------------------------ | ------------------------------------------------------------------------------------------------------------ |
-| [Nipype](http://nipy.org/nipype): Dataflows for reproducible biomedical research | R24 - DANDI: Distributed Archives for Neurophysiology Data Integration (Principal Investigator)                      |
-| [ReproschemaUI](https://github.com/repronim/reproschema-ui): Mobile voice and survey data collection       | P41 - ReproNim: A Center for Reproducible Neuroimaging Computation (Director of Data Models and Integration) |
-| [MURFI2](https://github.com/gablab/murfi2/): A realtime software for fMRI-based biofeedback | RF1 - Nobrainer: A robust and validated neural network tool suite for imagers (Principal Investigator) |
-| [MumbleMelody](https://sensein.group/mumble_melody_project/): Realtime vocal modification                  | U24 - An extensible brain knowledge base and toolset spanning modalities for multi-species data-driven cell types (Principal Investigator)       |
-| [Pydra](https://github.com/nipype/pydra): A new workflow engine          | Bridg2AI - Vocal biomarkers of health (Principal Investigator) |
+| Selected NIH Research Grants                                                                                 |
+| ------------------------------------------------------------------------------------------------------------ |
+| R24 - DANDI: Distributed Archives for Neurophysiology Data Integration (Principal Investigator) |
+| P41 - ReproNim: A Center for Reproducible Neuroimaging Computation (Director of Data Models and Integration) |
+| U24 - An extensible brain knowledge base and toolset spanning modalities for multi-species data-driven cell types (Principal Investigator) |
+| Bridg2AI - Vocal biomarkers of health (Principal Investigator) |
+
+| Technological Innovations                              |
+| ------------------------------------------------------ |
+| [DANDI](https://dandiarchive.org): A data repository and collaboration ecosystem for neurophysiology |
+| [Reproschema](https://repronim.org/reproschema): Mobile voice and survey data collection |
+| [MumbleMelody](https://sensein.group/mumble_melody_project/): Realtime vocal modification |
+| [Senselab](https://sensein.group/senselab/): A biometrics toolkit |
+| [Nobrainer](https://github.com/neuronets/nobrainer): A deep learning toolkit for neuroimaging |
+| [Nipype](http://nipy.org/nipype): Dataflows for reproducible biomedical research |
+| [Pydra](https://github.com/nipype/pydra): A new workflow engine |
+| [MURFI2](https://github.com/gablab/murfi2/): A realtime software for fMRI-based biofeedback |
 
 </textarea>
 <script src="config/strapdown.min.js"></script>
